--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,24 @@
-.App {
-  text-align: center;
+.listIndivide {
+  text-align: left; 
+  height: 55px;
+  line-height: 55px;
+
+  margin: 5px 7px 10px 7px;
+  padding: 0px 20px;
+
+  font-weight: 700;
+
+  border: 1px solid rgb(190, 190, 190);
+  border-radius: 5px;
+  box-shadow: 2px 2px 2px rgb(190, 190, 190);
+  background: white;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+#noneAdd {
+  background: white;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#noneAdd:hover {
+  background: rgb(219, 219, 219);
 }
