--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,13 @@
 .listIndivide {
-  text-align: left; 
+  /* width: 84%; */
+  text-align: left;
   height: 55px;
   line-height: 55px;
 
   margin: 5px 7px 10px 7px;
   padding: 0px 20px;
 
+  font-size: 15px;
   font-weight: 700;
 
   border: 1px solid rgb(190, 190, 190);
@@ -13,12 +15,48 @@
   box-shadow: 2px 2px 2px rgb(190, 190, 190);
   background: white;
 }
+.listIndivide:hover, .listIndivideInput:hover {
+  font-size: 15px;
+  font-weight: 700;
+  background: rgb(219, 219, 219);
+}
+.listIndivideInput {
+  width: 100%;
+  height: 50px;
+  text-align: left;
+  padding: 0px 20px 0px 0px;
 
+  font-size: 15px;
+  font-weight: 700;
 
+  border: 0;
+}
 
-#noneAdd {
+input:focus {outline:none;}
+/* #none0 > input {
+  width: 99%;
+  height: 50px;
+  
+  font-size: 15px;
+  font-weight: 700;
+  border: 0;
   background: white;
 }
-#noneAdd:hover {
+#none0 > input:hover {
+  width: 160px;
+  height: 50px;
+  
+  font-size: 15px;
+  font-weight: 700;
+  border: 0;
+  background: rgb(219, 219, 219);
+} */
+
+
+
+#noneAdd, #readyAdd, #ongoingAdd, #doneAdd {
+  background: white;
+}
+#noneAdd:hover, #readyAdd:hover, #ongoingAdd:hover, #doneAdd:hover {
   background: rgb(219, 219, 219);
 }
