--- a/src/App.css
+++ b/src/App.css
@@ -15,42 +15,91 @@
   box-shadow: 2px 2px 2px rgb(190, 190, 190);
   background: white;
 }
-.listIndivide:hover, .listIndivideInput:hover {
-  font-size: 15px;
-  font-weight: 700;
-  background: rgb(219, 219, 219);
-}
+
 .listIndivideInput {
-  width: 100%;
+  width: 225px;
   height: 50px;
   text-align: left;
   padding: 0px 20px 0px 0px;
 
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+
   font-size: 15px;
   font-weight: 700;
 
   border: 0;
+  background: transparent;
+}
+input:focus {
+  outline:none;
+  background: transparent;
 }
 
-input:focus {outline:none;}
-/* #none0 > input {
-  width: 99%;
+.value {
+  width: 240px;
   height: 50px;
-  
-  font-size: 15px;
-  font-weight: 700;
-  border: 0;
-  background: white;
+
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+
+  float: left;
+  background: transparent;
 }
-#none0 > input:hover {
-  width: 160px;
-  height: 50px;
-  
-  font-size: 15px;
-  font-weight: 700;
-  border: 0;
+
+
+
+.UDbox {
+  width: 33px;
+  height: 30px;
+  margin: 12px 0px 0px 0px;
+  float: right;
+  display: none;
+
+  border: 1px solid rgb(190, 190, 190);
+  border-radius: 5px;
+  box-shadow: 1px 1px 1px rgb(190, 190, 190);
+  background: transparent;
+}
+.UboxSelect {
+  width: 33px;
+  height: 25px;
+
+  margin: 44px 0px 0px 277px;
+  float: right;
+  text-align: center;
+  position: absolute;
+  display: none;
+
+  border: 1px solid rgb(190, 190, 190);
+  border-radius: 5px 5px 0px 0px;
+  /* box-shadow: 1px 1px 1px rgb(190, 190, 190); */
   background: rgb(219, 219, 219);
-} */
+}
+.DboxSelect {
+  width: 33px;
+  height: 25px;
+
+  margin: 71px 0px 0px 277px;
+  float: right;
+  text-align: center;
+  position: absolute;
+  display: none;
+
+  border: 1px solid rgb(190, 190, 190);
+  border-radius: 0px 0px 5px 5px;
+  /* box-shadow: 1px 1px 1px rgb(190, 190, 190); */
+  background: rgb(219, 219, 219);
+}
+
+
+
+.hr {
+  border: 3px solid skyblue;
+  display: none;
+}
 
 
 
