--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,40 @@
+:root {
+  --width : 37px;
+}
+.top {
+  width: 850px;
+}
+@media (max-width: 850px) {
+  .top {
+    width: 100%;
+  }
+}
+
+
+
+#listMain {
+  height: calc(100vh - 175px);
+  display: flex;
+}
+@media (max-width: 644px) {
+  #listMain {
+    height: calc(100vh - 218px);
+    display: flex;
+  }
+}
+
+.listIndivideBox, .listIndivideMainBox {
+  position: relative;
+}
+
+.listIndivideMain {
+  width: 340px;
+  min-width: 340px;
+  height: auto;
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+
 .listIndivide {
   /* width: 84%; */
   text-align: left;
@@ -14,6 +51,27 @@
   border-radius: 5px;
   box-shadow: 2px 2px 2px rgb(190, 190, 190);
   background: white;
+}
+.listIndivide:hover {
+    /* width: 84%; */
+    text-align: left;
+    height: 55px;
+    line-height: 55px;
+  
+    margin: 5px 7px 10px 7px;
+    padding: 0px 20px;
+  
+    font-size: 15px;
+    font-weight: 700;
+  
+    border: 1px solid rgb(190, 190, 190);
+    border-radius: 5px;
+    box-shadow: 2px 2px 2px rgb(190, 190, 190);
+    background: rgb(239, 239, 239);
+}
+.listIndivide:hover .UDbox {
+  opacity: 1;
+  transition: opacity 0.7s;
 }
 
 .listIndivideInput {
@@ -32,6 +90,10 @@
   border: 0;
   background: transparent;
 }
+/* .listIndivideInput:hover {
+  background: rgb(239, 239, 239);
+  transition: opacity 0.7s;
+} */
 input:focus {
   outline:none;
   background: transparent;
@@ -47,6 +109,7 @@ input:focus {
 
   float: left;
   background: transparent;
+  pointer-events : none;
 }
 
 
@@ -56,13 +119,15 @@ input:focus {
   height: 30px;
   margin: 12px 0px 0px 0px;
   float: right;
-  display: none;
+  opacity: 0;
 
   border: 1px solid rgb(190, 190, 190);
   border-radius: 5px;
   box-shadow: 1px 1px 1px rgb(190, 190, 190);
   background: transparent;
+  transition: opacity 0.7s;
 }
+
 .UboxSelect {
   width: 33px;
   height: 25px;
@@ -72,11 +137,12 @@ input:focus {
   text-align: center;
   position: absolute;
   display: none;
+  z-index: 999;
 
   border: 1px solid rgb(190, 190, 190);
   border-radius: 5px 5px 0px 0px;
   /* box-shadow: 1px 1px 1px rgb(190, 190, 190); */
-  background: rgb(219, 219, 219);
+  background: rgb(239, 239, 239);
 }
 .DboxSelect {
   width: 33px;
@@ -87,11 +153,12 @@ input:focus {
   text-align: center;
   position: absolute;
   display: none;
+  z-index: 999;
 
   border: 1px solid rgb(190, 190, 190);
   border-radius: 0px 0px 5px 5px;
   /* box-shadow: 1px 1px 1px rgb(190, 190, 190); */
-  background: rgb(219, 219, 219);
+  background: rgb(239, 239, 239)
 }
 
 
@@ -103,9 +170,50 @@ input:focus {
 
 
 
-#noneAdd, #readyAdd, #ongoingAdd, #doneAdd {
-  background: white;
+.listIndivideMain {
+  -ms-overflow-style: none; 
+  scrollbar-width: none;
 }
-#noneAdd:hover, #readyAdd:hover, #ongoingAdd:hover, #doneAdd:hover {
+.listIndivideMain::-webkit-scrollbar {
+  display: none;
+}
+
+.listIndivideMainInner1 {
+  text-align: left;
+  height: 50px;
+  padding: 0px 20px;
+  line-height: 50px;
+}
+.listIndivideMainInner2 {
+  padding: 0px 7px;
+  font-weight: 600;
+  background: transparent;
+}
+.listIndivideMainInner3 {
+  text-align: left;
+  height: 45px;
+  margin: 10px 7px;
+  padding: 0px 20px;
+  line-height: 45px;
+  color: rgb(150, 150, 150);
+}
+.listIndivideMainInner3:hover {
+  text-align: left;
+  height: 45px;
+  margin: 10px 7px;
+  padding: 0px 20px;
+  line-height: 45px;
   background: rgb(219, 219, 219);
+}
+
+
+
+#listIndivideMainInnerready {
+  background:rgb(240, 200, 200)
+}
+#listIndivideMainInnerongoing {
+  background:rgb(240, 240, 190)
+}
+#listIndivideMainInnerdone {
+  background:rgb(191, 235, 191)
 }
