--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,3 @@
-:root {
-  --width : 37px;
-}
 .top {
   width: 850px;
 }
@@ -9,16 +6,20 @@
     width: 100%;
   }
 }
+.flex {
+  width: 300px;
+  display: inline-block;
+}
 
 
 
 #listMain {
-  height: calc(100vh - 175px);
+  height: calc(100vh - 185px);
   display: flex;
 }
 @media (max-width: 644px) {
   #listMain {
-    height: calc(100vh - 218px);
+    height: calc(100vh - 228px);
     display: flex;
   }
 }
@@ -164,7 +165,7 @@ input:focus {
 
 
 .hr {
-  border: 3px solid skyblue;
+  border: 3px solid #9DD1EA;
   display: none;
 }
 
@@ -190,6 +191,25 @@ input:focus {
   background: transparent;
 }
 .listIndivideMainInner3 {
+  align-items: left;
+  padding: 0px 0px 0px 8px;
+  color: rgb(160, 160, 160);
+  font-weight: 600;
+  background: transparent;
+}
+.fimage {
+  width: 25px;
+  height: 25px;
+  padding: 11px 0px 0px 0px;
+  float: left;
+}
+.image {
+  width: 18px;
+  height: 18px;
+  float: right;
+  padding: 17px 0px 0px 10px;
+}
+.listIndivideMainInner4 {
   text-align: left;
   height: 45px;
   margin: 10px 7px;
@@ -197,7 +217,7 @@ input:focus {
   line-height: 45px;
   color: rgb(150, 150, 150);
 }
-.listIndivideMainInner3:hover {
+.listIndivideMainInner4:hover {
   text-align: left;
   height: 45px;
   margin: 10px 7px;
